--- a/docs/styles/index.less
+++ b/docs/styles/index.less
@@ -62,8 +62,9 @@ BODY {
 }
 
 img {
-    border-radius: 10px;
-    box-shadow: rgba(33, 33, 33, 0.1) 0px 8px 16px;
+    border-radius: 5px;
+    // box-shadow: rgba(33, 33, 33, 0.1) 0px 8px 16px;
+    max-height: 96px;
 }
 
 strong {
@@ -94,3 +95,5 @@ ol, ul {
         padding: 16px;
     }
 }
+
+@import "./mobile.less";
